syntax = "proto3";
option csharp_namespace = "gRPCClient";


service ItemService {
  rpc getItem(SearchItemDTO) returns (Item);
  rpc createItem(CreateItemDTO) returns (Item);
  rpc updateItem(CreateItemDTO) returns (Item);
  rpc deleteItem(SearchItemDTO) returns (Item);
}

message CreateItemDTO {
  string name = 2;
  string description = 3;
  double price = 4;
  string currency = 5;
  string category = 6;
  string status = 7;
}

message SearchItemDTO {
  int64 id = 1;
  int64 ownerId = 2;
  string name = 3;
  string description = 4;
  double price = 5;
  bool status = 6;
}

message GetItemCount {
  int64 count = 1;
}

message Item {
  int64 id = 1;
  int64 ownerId = 2;
  string name = 3;
  string description = 4;
  double price = 5;
  string currency = 6;
  message LocalDateTime {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
    int32 hour = 4;
    int32 minute = 5;
  }
  LocalDateTime dateOfAdding = 7;
  string category = 8;
  bool status = 9;
}