syntax = "proto3";
import "user.proto";
import "category.proto";

option java_multiple_files = true;
option java_package = "dk.via.nbnp.databaseserver.protobuf";

service ItemService {
  rpc createItem(CreateItemDTO) returns (Item);
  rpc getItems(SearchItemDTO) returns (stream Item);
  rpc getItemsByOwner(SearchItemDTO) returns (stream Item);
  rpc getItemById(SearchItemDTO) returns (Item);
  rpc updateItem(UpdateItemDTO) returns (Item);
  rpc deleteItem(SearchItemDTO) returns (Item);
}

message CreateItemDTO {
  int64 ownerId = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string currency = 5;
  string category = 6;
  bool status = 7;
}

message UpdateItemDTO {
  int64 id = 1;
  int64 ownerId = 2;
  string name = 3;
  string description = 4;
  double price = 5;
  string currency = 6;
  string category = 7;
  bool status = 8;
}

message SearchItemDTO {
  int64 id = 1;
  int64 ownerId = 2;
  string name = 3;
  string description = 4;
  double minPrice = 5;
  double maxPrice = 6;
  bool status = 7;
}

message GetItemCount {
  int64 count = 1;
}

message Item {
  int64 id = 1;
  User owner = 2;
  string name = 3;
  string description = 4;
  double price = 5;
  string currency = 6;
  LocalDateTime dateOfAdding = 7;
  string category = 8;
  bool status = 9;
}
